k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phantomdev
  labels:
    app: phantomdev
